force-app/main/default/objects/Opp_VP__c/Opp_VP__c.object-meta.xml
<CustomObject>
    <label>Opportunity Valuation Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Valuation Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>