force-app/main/default/objects/Opp_VP__c/fields/Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Fee_Total__c</fullName>
    <description>sum of all related VP&apos;s Report Fee field</description>
    <label>Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>