force-app/main/default/objects/Opp_VP__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Opportunity record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>Opportunity_Portfolio_Valuations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>