force-app/main/default/objects/Opp_VP__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity__c , Opportunity__r.Opportunity_Number__c , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>