force-app/main/default/objects/Opp_VP__c/fields/ResultingEngagemnetRTonVP__c.field-meta.xml
<CustomField>
    <fullName>ResultingEngagemnetRTonVP__c</fullName>
    <description>Resulting Engagement Record Type On VP</description>
    <formula>Opportunity__r.Resulting_Egmt_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultingEngagemnetRTonVP</label>
    <type>Text</type>
</CustomField>