force-app/main/default/objects/Opp_VP__c/fields/Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Date__c</fullName>
    <description>Portfolio Valuation Date</description>
    <label>Valuation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>