force-app/main/default/objects/Opp_VP__c/validationRules/FeeTotalFieldValidation_OppVP.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeTotalFieldValidation_OppVP</fullName>
    <active>true</active>
    <description>The Fee Total can not be negative</description>
    <errorConditionFormula>IF( Fee_Total__c &lt; 0 , true, false )</errorConditionFormula>
    <errorMessage>Fee Total field value can not be negative</errorMessage>
</ValidationRule>