force-app/main/default/objects/Opp_VP__c/validationRules/HL_Opp_VP_Creation_Is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_Creation_Is_Locked</fullName>
    <active>true</active>
    <description>To stop creating Opp Valuation period if Opportunity is converted.</description>
    <errorConditionFormula>IF(AND(ISNEW(), Opportunity__r.Converted_to_Engagement__c), true, false)</errorConditionFormula>
    <errorMessage>Valuation Period can not be created once Opportunity is converted into Engagement so please go to related Engagement Valuation for further creation.</errorMessage>
</ValidationRule>