force-app/main/default/objects/Opp_VP__c/validationRules/HL_Opp_VP_is_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_is_locked</fullName>
    <active>true</active>
    <description>To stop modification on Valuation period if Opportunity is converted.</description>
    <errorConditionFormula>IF((AND( NOT(ISNEW()),NOT(ISCHANGED(IsConverted__c)), AND(Opportunity__r.Converted_to_Engagement__c, NOT(ISCHANGED( Opportunity__c ))))), true, false)</errorConditionFormula>
    <errorMessage>Valuation Period can not be modified once Opportunity is converted into Engagement so please go to related Engagement Valuation for further modification.</errorMessage>
</ValidationRule>