force-app/main/default/objects/Opp_VP__c/validationRules/HL_Opportunity_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opportunity_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Opportunity on Opportunity Valuation Period.</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Opportunity__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>You are not allowed to change &apos;Opportunity&apos;.</errorMessage>
</ValidationRule>